# adaptive-clock

./: .gitignore  .mise.toml  AGENTS.md  README.md  biome.json  index.html  lignore.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
