[package]
name = "adaptive-clock"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
